--- a/style.css
+++ b/style.css
@@ -1,3 +1,70 @@
 body {
-    background-color: blueviolet;
+    padding: 100px;
+    color: #FE3B15;
+    background-color: #B7B6AC;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
+
+    #calculator {
+        height: 140px;
+        width: 115px;        
+        background-color: #3C3C4C;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        gap: 5px;
+    }
+
+        #value {
+            height: 25px;
+            margin: 10px 10px 0 10px;
+            background-color: #B7B6AC;
+            border: 1px solid black;
+            border-radius: 3px;
+        }
+
+        #buttons {
+            height: 100px;
+            padding: 0px 5px 5px 5px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 5px;
+        }
+
+            #numbers {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                gap: 3px;
+            }
+
+                .numbers-trium {
+                    display: flex;
+                    justify-content: center;
+                    gap: 3px;
+                }
+
+                    .number {
+                        color: #FE3B15;
+                        background-color: #9DA1AA;
+                        border: 1px solid black;
+                        border-radius: 10px;
+                    }
+
+            #operations {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                gap: 3px;
+            }
+                .operation {
+                    width: 27.5px;
+                    color: #FE3B15;
+                    background-color: #9DA1AA;
+                    border: 1px solid black;
+                    border-radius: 7px;
+                }
