--- a/style.css
+++ b/style.css
@@ -10,37 +10,37 @@ body {
 }
 
     #calculator {
-        height: 140px;
-        width: 115px;        
+        height: 420px;
+        width: 345px;        
         background-color: #3C3C4C;
         border: none;
-        border-radius: 5px;
+        border-radius: 15px;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        gap: 5px;
+        gap: 15px;
     }
 
         #display {
-            height: 25px;
-            margin: 10px 10px 0 10px;
-            padding: 0 10px;
+            height: 75px;
+            margin: 30px 30px 0 30px;
+            padding: 0 30px;
+            font-size: 60px;
             background-color: #B7B6AC;
-            border: 1px solid #545245;
-            border-radius: 3px;
-            font-size: 10px;
+            border: 3px solid #545245;
+            border-radius: 9px;
             vertical-align: middle;
-            line-height: 25px;
+            line-height: 75px;
             caret-color: transparent;
         }
 
         #buttons {
-            height: 100px;
-            padding: 0px 5px 5px 5px;
+            height: 300px;
+            padding: 0px 15px 15px 15px;
             display: flex;
             justify-content: center;
             align-items: center;
-            gap: 5px;
+            gap: 15px;
         }
 
             #numbers {
@@ -48,15 +48,16 @@ body {
                 flex-wrap: wrap;
                 justify-content: center;
                 align-items: center;
-                gap: 3px;
+                gap: 9px;
             }
 
                 .number {
-                    width: 22px;
+                    width: 66px;
+                    font-size: 40px;
                     color: #FE3B15BF;
                     background-color: #9DA1AABF;
-                    border: 1px solid #545245BF;
-                    border-radius: 10px;
+                    border: 3px solid #545245BF;
+                    border-radius: 30px;                    
                     caret-color: transparent;
                     transition-duration: 0.125s;
                 }
@@ -67,18 +68,36 @@ body {
                     background-color: #9DA1AA;
                 }
 
+                #equal {
+                    width: 66px;
+                    font-size: 40px;
+                    color: #FE3B15BF;
+                    background-color: #B7B6ACBF;
+                    border: 3px solid #54524580;
+                    border-radius: 30px;                    
+                    caret-color: transparent;
+                    transition-duration: 0.125s;
+                }
+
+                #equal:hover {
+                    font-weight: bolder;
+                    color: #FE3B15;
+                    background-color: #B7B6AC;
+                }
+
             #operations {
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
-                gap: 3px;
+                gap: 9px;
             }
                 .operation {
-                    width: 27.5px;
+                    width: 82.5px;
+                    font-size: 40px;
                     color: #FE3B15BF;
                     background-color: #B7B6ACBF;
-                    border: 1px solid #54524580;
-                    border-radius: 7px;
+                    border: 3px solid #54524580;
+                    border-radius: 21px;
                     caret-color: transparent;
                     transition-duration: 0.125s;
                 }
